--- a/Round2/Round2_file3.Rmd
+++ b/Round2/Round2_file3.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Round2"
+title: "Basic setup. Unbalanced folding. "
 author: "Jonathan Rosenblatt"
 date: "8/2/2017"
 output: html_document
@@ -21,7 +21,6 @@ cost.2 <- 1e-1
 
 source('Gilron Effect of Cross Validatino.R')
 
-## Signal in location
 effects <- seq(0, 0.5, length=3) # change in location
 
 ## Signal in scale
@@ -34,7 +33,7 @@ Sigma <- diag(p)
 library(RhpcBLASctl)
 blas_set_num_threads(1)
 
-registerDoMC(cores=110)
+registerDoMC(cores=100)
 ```
 
 
@@ -60,32 +59,33 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     
     # Observables 
     ts <- list(
-      Oracle=t_Oracle(x1, x2, Sigma, Sigma),
-      Hotelling=t_Hotelling(x1, x2, FALSE),
-      Hotelling.shrink=t_Hotelling(x1, x2, TRUE),
-      lda.CV.1=t_lda_cv(noise, labels, labels, fold.ids, type=1),
-      lda.CV.2=t_lda_cv(noise, labels, labels, fold.ids, type=2),
-      lda.noCV.1=t_lda(noise, labels, noise, labels, type=1),
-      lda.noCV.2=t_lda(noise, labels, noise, labels, type=2),
-      sd=t_SD(x1, x2),
-      svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=1),
-      svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=1),
-      svm.CV.3=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=2),
-      svm.CV.4=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=2),
-      svm.noCV.1=t_svm(noise, labels, noise, labels, cost=cost.1, type=1),
-      svm.noCV.2=t_svm(noise, labels, noise, labels, cost=cost.2, type=1),
-      svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
-      svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2)
+        Oracle=t_Oracle(x1, x2, Sigma, Sigma),
+        Hotelling=t_Hotelling(x1, x2, FALSE),
+        Hotelling.shrink=t_Hotelling(x1, x2, TRUE),
+        Goeman=t_goeman(x1, x2),
+        lda.CV.1=t_lda_cv(noise, labels, labels, fold.ids, type=1),
+        lda.CV.2=t_lda_cv(noise, labels, labels, fold.ids, type=2),
+        lda.noCV.1=t_lda(noise, labels, noise, labels, type=1),
+        lda.noCV.2=t_lda(noise, labels, noise, labels, type=2),
+        sd=t_SD(x1, x2),
+        svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=1),
+        svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=1),
+        svm.CV.3=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=2),
+        svm.CV.4=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=2),
+        svm.noCV.1=t_svm(noise, labels, noise, labels, cost=cost.1, type=1),
+        svm.noCV.2=t_svm(noise, labels, noise, labels, cost=cost.2, type=1),
+        svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
+        svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2)
     )
     
     
     # Prepare to permute
     old.labels <- labels
     old.folds.ids <- fold.ids
-    statistics.names <- names(ts)
+    statistics.names <<- names(ts)
     
     # Initialize permuted statistics
-    permuted <- matrix(-1, ncol=length(ts), nrow=n.permutations)
+    permuted <- matrix(NA, ncol=length(ts), nrow=n.permutations)
     
     for(i in 1:n.permutations){
       # i <- 1
@@ -95,17 +95,11 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
       x1 <- noise[labels,]
       x2 <- noise[!labels,]
       
-      # Checking balance:
-      # capture.output(table(.fold.ids, .labels), file=balanc.log, append = TRUE)
-      
-      # for permuting Xs:
-      # .indexes <- sample(seq(n))
-      #  .noise <- noise[.indexes,] 
-      
       permuted[i,] <- c(
         Oracle=t_Oracle(x1, x2, Sigma, Sigma),
         Hotelling=t_Hotelling(x1, x2, FALSE),
         Hotelling.shrink=t_Hotelling(x1, x2, TRUE),
+        Goeman=t_goeman(x1, x2),
         lda.CV.1=t_lda_cv(noise, labels, labels, fold.ids, type=1),
         lda.CV.2=t_lda_cv(noise, labels, labels, fold.ids, type=2),
         lda.noCV.1=t_lda(noise, labels, noise, labels, type=1),
@@ -145,8 +139,9 @@ err.bar <- round(3*sqrt(.05*.95/(n.replications)),3) # confidence limits of p-va
 
 pvals.1.9 %<>%  as.data.table()
 
-names(pvals.1.9)[-1] <- c('Oracle','Hotelling','Hotelling.shrink', 'LDA.CV.1', 'LDA.CV.2', 'LDA.noCV.1', 'LDA.noCV.2',  'SD','SVM.CV.1', 'SVM.CV.2', 'SVM.CV.3',  'SVM.CV.4','SVM.noCV.1', 'SVM.noCV.2', 'SVM.noCV.3','SVM.noCV.4')
-  
+# names(pvals.1.9)[-1] <- c('Oracle','Hotelling','Hotelling.shrink', 'LDA.CV.1', 'LDA.CV.2', 'LDA.noCV.1', 'LDA.noCV.2',  'SD','SVM.CV.1', 'SVM.CV.2', 'SVM.CV.3',  'SVM.CV.4','SVM.noCV.1', 'SVM.noCV.2', 'SVM.noCV.3','SVM.noCV.4')
+names(pvals.1.9)[-1] <- statistics.names
+
 pvals.melt <- melt(pvals.1.9, id.vars=c("effect"), variable.name='statistic') 
 statistic.filter <- c("SVM.CV.3","SVM.CV.4","SVM.noCV.3","SVM.noCV.4")
 pvals.melt <- pvals.melt[!(statistic %in% statistic.filter),,]
