--- a/Round2/Round2_file13.Rmd
+++ b/Round2/Round2_file13.Rmd
@@ -29,8 +29,7 @@ Sigma <- diag(p)
 
 
 ```{r}
-library(RhpcBLASctl)
-blas_set_num_threads(1)
+RhpcBLASctl::blas_set_num_threads(1)
 registerDoMC(cores=100)
 ```
 
@@ -61,34 +60,33 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind)  %:% foreach(effect=eff
     Oracle=t_Oracle(x1, x2, Sigma, Sigma),
     Hotelling=t_Hotelling(x1, x2, FALSE),
     Hotelling.shrink=t_Hotelling(x1, x2, TRUE),
+    Goeman=t_goeman(x1, x2),
+    sd=t_SD(x1, x2),
     lda.CV.1=t_lda_cv(noise, labels, labels, fold.ids, type=1),
     lda.CV.2=t_lda_cv(noise, labels, labels, fold.ids, type=2),
     lda.noCV.1=t_lda(noise, labels, noise, labels, type=1),
     lda.noCV.2=t_lda(noise, labels, noise, labels, type=2),
-    sd=t_SD(x1, x2),
     svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=1),
     svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=1),
-    svm.CV.3=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=2),
-    svm.CV.4=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=2),
+    # svm.CV.3=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=2),
+    # svm.CV.4=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=2),
     svm.noCV.1=t_svm(noise, labels, noise, labels, cost=cost.1, type=1),
     svm.noCV.2=t_svm(noise, labels, noise, labels, cost=cost.2, type=1),
-    svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
-    svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2),
-    svm.Boot.1=t_svm_boot(noise, labels, B=10, type2=1, cost=cost.2, type=1),
+    # svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
+    # svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2),
+    svm.Boot.1=t_svm_boot(noise, labels, B=10, type2=2, cost=cost.1, type=1),
     svm.Boot.2=t_svm_boot(noise, labels, B=10, type2=2, cost=cost.2, type=1),
-    svm.Boot.3=t_svm_boot(noise, labels, B=50, type2=1, cost=cost.2, type=1),
+    svm.Boot.3=t_svm_boot(noise, labels, B=50, type2=2, cost=cost.1, type=1),
     svm.Boot.4=t_svm_boot(noise, labels, B=50, type2=2, cost=cost.2,  type=1),
-    lda.Boot.1=t_lda_boot(noise, labels, B=10, type2=1, type=1),
-    lda.Boot.2=t_lda_boot(noise, labels, B=10, type2=2, type=1)
+    lda.Boot.1=t_lda_boot(noise, labels, B=10, type2=2, type=1)
   )
   
-
   # Initialize result containers
   permuted <- matrix(NA, ncol=length(ts), nrow=n.permutations)
   
   old.labels <- labels
   old.folds.ids <- fold.ids
-  statistics.names <<- names(ts)
+  statistics.names <- names(ts)
   
   for(i in 1:n.permutations){
     # i <- 1
@@ -105,25 +103,25 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind)  %:% foreach(effect=eff
       Oracle=t_Oracle(x1, x2, Sigma, Sigma),
       Hotelling=t_Hotelling(x1, x2, FALSE),
       Hotelling.shrink=t_Hotelling(x1, x2, TRUE),
+      Goeman=t_goeman(x1, x2),
+      sd=t_SD(x1, x2),
       lda.CV.1=t_lda_cv(noise, labels, labels, fold.ids, type=1),
       lda.CV.2=t_lda_cv(noise, labels, labels, fold.ids, type=2),
       lda.noCV.1=t_lda(noise, labels, noise, labels, type=1),
       lda.noCV.2=t_lda(noise, labels, noise, labels, type=2),
-      sd=t_SD(x1, x2),
       svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=1),
       svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=1),
-      svm.CV.3=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=2),
-      svm.CV.4=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=2),
+      # svm.CV.3=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=2),
+      # svm.CV.4=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=2),
       svm.noCV.1=t_svm(noise, labels, noise, labels, cost=cost.1, type=1),
       svm.noCV.2=t_svm(noise, labels, noise, labels, cost=cost.2, type=1),
-      svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
-      svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2),
-      svm.Boot.1=t_svm_boot(noise, labels, B=10, type2=1, cost=cost.2, type=1),
+      # svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
+      # svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2),
+      svm.Boot.1=t_svm_boot(noise, labels, B=10, type2=2, cost=cost.1, type=1),
       svm.Boot.2=t_svm_boot(noise, labels, B=10, type2=2, cost=cost.2, type=1),
-      svm.Boot.3=t_svm_boot(noise, labels, B=50, type2=1, cost=cost.2, type=1),
+      svm.Boot.3=t_svm_boot(noise, labels, B=50, type2=2, cost=cost.1, type=1),
       svm.Boot.4=t_svm_boot(noise, labels, B=50, type2=2, cost=cost.2,  type=1),
-      lda.Boot.1=t_lda_boot(noise, labels, B=10, type2=1, type=1),
-      lda.Boot.2=t_lda_boot(noise, labels, B=10, type2=2, type=1)
+      lda.Boot.1=t_lda_boot(noise, labels, B=10, type2=2, type=1)
     )
   } # End permutation
 
