added strong signal on low PCs of AR1

--- a/Round2/Round2_file19.Rmd
+++ b/Round2/Round2_file19.Rmd
@@ -27,6 +27,7 @@ effects <- seq(0, 0.5, length=3)
 
 ## Covariance between features
 load(file='Sigma.RData')
+lattice::levelplot(Sigma)
 Sigma.eigen <- eigen(Sigma, symmetric=TRUE)
 plot(Sigma.eigen$values, type='h')
 direction <- rep(1,p)
