--- a/Round2/Round2_file25.Rmd
+++ b/Round2/Round2_file25.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Arbitrary Covariance. Signal in LOW PCs of noise"
+title: "Short term memory (AR(1)) with STRONG signal on low PCs"
 author: "Jonathan Rosenblatt"
 date: "8/2/2017"
 output: html_document
@@ -8,7 +8,7 @@ output: html_document
 
 
 ```{r preliminaries}
-file.name <- "file17"
+file.name <- "file25"
 
 balance <- TRUE   # set for TRUE for balanced folding ana refolding.
 n.replications <-  1e3
@@ -22,27 +22,20 @@ cost.2 <- 1e-1
 source('Gilron Effect of Cross Validatino.R')
 
 ## Signal in location
-effects <- seq(0, 0.5, length=3) 
+effects <- seq(0.5, 2, length=3) 
 
-
-## Make correlation matrix
-# A <- matrix(rnorm(p^2), ncol = p, nrow=p)
-# Sigma0 <- crossprod(A,A)
-# D <- diag(1/sqrt(diag(Sigma0)))
-# Sigma <- D %*% Sigma0 %*% D
-# lattice::levelplot(Sigma)
-# save(Sigma, file='Sigma.RData')
-load(file='Sigma.RData')
+## Dependence
+Sigma <- ar1_cov(n = p, rho=0.6)
+lattice::levelplot(Sigma)
 Sigma.eigen <- eigen(Sigma, symmetric=TRUE)
-# plot(Sigma.eigen$values, type='h')
-direction <- sqrt(p) * Sigma.eigen$vectors[,which.min(abs(Sigma.eigen$values))] 
+direction <- sqrt(p) * Sigma.eigen$vectors[,which.min(abs(Sigma.eigen$values))]
 ```
 
 
 ## Fixed folds. Cross-Validated. All in one.
 ```{r}
 RhpcBLASctl::blas_set_num_threads(1)
-registerDoMC(cores=100)
+registerDoMC(cores=110)
 ```
 
 
@@ -54,18 +47,19 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     
     ## Gaussian noise
     .noise <- rmvnorm(n=n, sigma = Sigma)
-    # matplot(t(.noise), type='l')
 
     ## Shift alternative:
+    # noise <- .noise + effect * labels
     noise <- .noise
-    noise[labels,] <- noise[labels,] + effect * direction
-    
+    noise[labels,] <- noise[labels,] + effect * direction 
+
     ## Compute observed statistic
     x1 <- noise[labels,]
     x2 <- noise[!labels,]
     
     ## Asign observations to folds. Use the simple label structure to balance folds.
     fold.ids <- balanced_folding(labels, n.folds, balance = balance)
+    # capture.output(table(fold.ids, labels), file=balance.log, append = TRUE)
     
     # Observables 
     ts <- list(
@@ -143,7 +137,7 @@ save.image(file=paste(file.name,".RData", sep=''))
 
 
 ```{r analyze multiple effects}
-# load("file17.RData")
+# load("file11.RData")
 err.bar <- round(3*sqrt(.05*.95/(n.replications)),3) # confidence limits of p-value
 .limits <- 0.05 + c(-err.bar,0,err.bar)
 
@@ -151,7 +145,7 @@ pvals.1.9 %<>%  as.data.table()
 
 # names(pvals.1.9)[-1] <- c('Oracle','Hotelling','Hotelling.shrink', 'LDA.CV.1', 'LDA.CV.2', 'LDA.noCV.1', 'LDA.noCV.2',  'SD','SVM.CV.1', 'SVM.CV.2', 'SVM.CV.3',  'SVM.CV.4','SVM.noCV.1', 'SVM.noCV.2', 'SVM.noCV.3','SVM.noCV.4')
 names(pvals.1.9)[-1] <- statistics.names
- 
+
 pvals.melt <- melt(pvals.1.9, id.vars=c("effect"), variable.name='statistic') 
 statistic.filter <- c("SVM.CV.3","SVM.CV.4","SVM.noCV.3","SVM.noCV.4")
 pvals.melt <- pvals.melt[!(statistic %in% statistic.filter),,]
