--- a/Round2/Round2_file11.Rmd
+++ b/Round2/Round2_file11.Rmd
@@ -5,8 +5,6 @@ date: "8/2/2017"
 output: html_document
 ---
 
-
-
 ```{r preliminaries}
 file.name <- "file11"
 
@@ -27,17 +25,17 @@ effects <- seq(0, 0.5, length=3)
 ## Dependence
 Sigma <- ar1_cov(n = p, rho=0.6)
 lattice::levelplot(Sigma)
-Sigma.eigen <- eigen(Sigma, symmetric=TRUE)
-direction <- rep(1,p)
+Sigma.eigen <- eigen(Sigma)
+direction0 <- Sigma.eigen$vectors[,which.max(abs(Sigma.eigen$values))] 
+maha <- mahalanobis(x = direction0, center = 0, cov = Sigma)
+direction <- direction0 *sqrt(p/maha)
 ```
 
 
 ## Fixed folds. Cross-Validated. All in one.
 ```{r}
-library(RhpcBLASctl)
-blas_set_num_threads(1)
-
-registerDoMC(cores=110)
+RhpcBLASctl::blas_set_num_threads(1)
+registerDoMC(cores=100)
 ```
 
 
@@ -88,8 +86,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     # Prepare to permute
     old.labels <- labels
     old.folds.ids <- fold.ids
-    statistics.names <- names(ts)
-    
+
     # Initialize permuted statistics
     permuted <- matrix(NA, ncol=length(ts), nrow=n.permutations)
     
@@ -127,7 +124,8 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     for(i in seq_along(ts)){
       pvals[i] <- mean(ts[i]<=permuted[,i], na.rm=TRUE)
     }
-    
+    names(pvals) <- names(ts)
+
     c(effect=effect, pvals) 
   }
 } 
@@ -144,9 +142,6 @@ err.bar <- round(3*sqrt(.05*.95/(n.replications)),3) # confidence limits of p-va
 .limits <- 0.05 + c(-err.bar,0,err.bar)
 
 pvals.1.9 %<>%  as.data.table()
-
-# names(pvals.1.9)[-1] <- c('Oracle','Hotelling','Hotelling.shrink', 'LDA.CV.1', 'LDA.CV.2', 'LDA.noCV.1', 'LDA.noCV.2',  'SD','SVM.CV.1', 'SVM.CV.2', 'SVM.CV.3',  'SVM.CV.4','SVM.noCV.1', 'SVM.noCV.2', 'SVM.noCV.3','SVM.noCV.4')
-names(pvals.1.9)[-1] <- statistics.names
 
 pvals.melt <- melt(pvals.1.9, id.vars=c("effect"), variable.name='statistic') 
 statistic.filter <- c("SVM.CV.3","SVM.CV.4","SVM.noCV.3","SVM.noCV.4")
