--- a/Round2/Manuscript/preamble.tex
+++ b/Round2/Manuscript/preamble.tex
@@ -26,7 +26,13 @@
 
 
 
-\author{Jonathan Rosenblatt \\ Ben Gurion University, 
+\author{Jonathan Rosenblatt \\ 
+	Department of IE\&M and \\
+	Zlotowsky Center for Neuroscience, \\
+	Ben Gurion University of the Negev, Israel. 
+	\and Jelle Goeman \\ 
+	Department of Medical Statistics and Bioinformatics, \\
+	Leiden University Medical Center, The Netherlands.
 	\and Roee Gilron \\ Tel Aviv University,
 	\and Roy Mukamel \\ Tel Aviv University.}
 
