--- a/Round2/Round2_file17.Rmd
+++ b/Round2/Round2_file17.Rmd
@@ -34,6 +34,7 @@ effects <- seq(0, 0.5, length=3)
 load(file='Sigma.RData')
 lattice::levelplot(Sigma)
 Sigma.eigen <- eigen(Sigma)
+plot(Sigma.eigen$values, type='h')
 direction0 <- Sigma.eigen$vectors[,which.min(abs(Sigma.eigen$values))] 
 maha <- mahalanobis(x = direction0, center = 0, cov = Sigma)
 direction <- direction0 *sqrt(p/maha)
