--- a/Round2/Round2_file28.Rmd
+++ b/Round2/Round2_file28.Rmd
@@ -1,19 +1,19 @@
 ---
-title: "Basic setup. Balanced folding."
+title: "Arbitrary Covariance from eigenvalues. Signal in LOW PCs of noise"
 author: "Jonathan Rosenblatt"
 date: "8/2/2017"
 output: html_document
 editor_options: 
-  chunk_output_type: inline
+  chunk_output_type: console
 ---
 
 
 
 ```{r preliminaries}
-file.name <- "file2"
+file.name <- "file28"
 
 balance <- TRUE   # set for TRUE for balanced folding ana refolding.
-n.replications <-  1e3
+n.replications <-  1e2 #1e3
 p <- 23
 n <- 4e1 # total sample size-> n/2 in each group.
 n.permutations <- 3e2
@@ -23,13 +23,18 @@ cost.2 <- 1e-1
 
 source('Gilron Effect of Cross Validatino.R')
 
-effects <- seq(0, 0.5, length=3) # change in location
+## Signal in location
+effects <- seq(0, 0.5, length=3) 
 
-Sigma <- diag(p)
-lattice::levelplot(Sigma)
-direction0 <- rep(1,p)
+
+## Make correlation matrix
+load(file='Sigma27.RData')
+# lattice::levelplot(Sigma)
+# plot(diag(D),type='h')
+direction0 <- V[,1]
 maha <- mahalanobis(x = direction0, center = 0, cov = Sigma)
-direction <- direction0 *sqrt(p/maha)
+direction <- direction0 * sqrt(p/maha)
+# mahalanobis(x = direction, center = 0, cov = Sigma)
 ```
 
 
@@ -48,13 +53,11 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     
     ## Gaussian noise
     .noise <- rmvnorm(n=n, sigma = Sigma)
-    
+    # matplot(t(.noise), type='l')
+
     ## Shift alternative:
-    # effect <- effects[[3]]
-    
-    # noise <- .noise
-    # noise[labels,] <- noise[labels,] + effect * direction
-    noise <- .noise + effect * labels
+    noise <- .noise
+    noise[labels,] <- noise[labels,] + effect * direction
     
     ## Compute observed statistic
     x1 <- noise[labels,]
@@ -62,7 +65,6 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     
     ## Asign observations to folds. Use the simple label structure to balance folds.
     fold.ids <- balanced_folding(labels, n.folds, balance = balance)
-    # capture.output(table(fold.ids, labels), file=balance.log, append = TRUE)
     
     # Observables 
     ts <- list(
@@ -77,14 +79,13 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
       sd=t_SD(x1, x2),
       svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=1),
       svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=1),
-      svm.CV.3=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=2),
-      svm.CV.4=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=2),
+      # svm.CV.3=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=2),
+      # svm.CV.4=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=2),
       svm.noCV.1=t_svm(noise, labels, noise, labels, cost=cost.1, type=1),
-      svm.noCV.2=t_svm(noise, labels, noise, labels, cost=cost.2, type=1),
-      svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
-      svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2)
+      svm.noCV.2=t_svm(noise, labels, noise, labels, cost=cost.2, type=1)
+      # svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
+      # svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2)
     )
-    
     
     # Prepare to permute
     old.labels <- labels
@@ -113,34 +114,35 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
         sd=t_SD(x1, x2),
         svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=1),
         svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=1),
-        svm.CV.3=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=2),
-        svm.CV.4=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=2),
+        # svm.CV.3=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=2),
+        # svm.CV.4=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=2),
         svm.noCV.1=t_svm(noise, labels, noise, labels, cost=cost.1, type=1),
-        svm.noCV.2=t_svm(noise, labels, noise, labels, cost=cost.2, type=1),
-        svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
-        svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2)
+        svm.noCV.2=t_svm(noise, labels, noise, labels, cost=cost.2, type=1)
+        # svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
+        # svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2)
       )
     } # End permutation
     
-    # Compute p-vals for each statistic
+    ## Compute p-vals for each statistic
     pvals <- rep(NA, length(ts))
     for(i in seq_along(ts)){
       pvals[i] <- mean(ts[i]<=permuted[,i], na.rm=TRUE)
     }
     names(pvals) <- names(ts)
 
+    
     c(effect=effect, pvals) 
   }
 } 
   
 pbPost(type = "note", body = "Done", the.message)
-# save.image(file=paste(file.name,".RData", sep=''))
+save.image(file=paste(file.name,".RData", sep=''))
 ```
 
 
 
 ```{r analyze multiple effects}
-# load("file2.RData")
+# load("file28.RData")
 err.bar <- round(3*sqrt(.05*.95/(n.replications)),3) # confidence limits of p-value
 .limits <- 0.05 + c(-err.bar,0,err.bar)
 
