--- a/Round2/Round2_file19.Rmd
+++ b/Round2/Round2_file19.Rmd
@@ -50,11 +50,12 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     
     ## Gaussian noise
     .noise <- rmvnorm(n=n, sigma = Sigma)
-    # matplot(t(.noise), type='l')
 
     ## Shift alternative:
     noise <- .noise
-    noise[labels,] <- noise[labels,] + effect * direction
+    shift <- matrix(effect * direction, nrow=20, ncol=23, byrow = TRUE)
+    noise[labels,] <- noise[labels,] + shift
+
     
     ## Compute observed statistic
     x1 <- noise[labels,]
