--- a/Round2/Round2_file21.Rmd
+++ b/Round2/Round2_file21.Rmd
@@ -3,8 +3,9 @@ title: "Short term memory (AR(1)) with signal in LOW PCs"
 author: "Jonathan Rosenblatt"
 date: "8/2/2017"
 output: html_document
+editor_options: 
+  chunk_output_type: inline
 ---
-
 
 
 ```{r preliminaries}
@@ -19,7 +20,7 @@ n.folds <- 4
 cost.1 <- 1e1
 cost.2 <- 1e-1
 
-source('Gilron Effect of Cross Validatino.R')
+source('Round2/Gilron Effect of Cross Validatino.R')
 
 ## Signal in location
 effects <- seq(0, 0.5, length=3) 
@@ -27,14 +28,12 @@ effects <- seq(0, 0.5, length=3)
 ## Dependence
 Sigma <- ar1_cov(n = p, rho=0.6)
 lattice::levelplot(Sigma)
-isSymmetric(Sigma)
 Sigma.eigen <- eigen(Sigma, symmetric=TRUE)
 plot(Sigma.eigen$values, type='h')
 direction0 <- Sigma.eigen$vectors[,which.min(abs(Sigma.eigen$values))] 
 maha <- mahalanobis(x = direction0, center = 0, cov = Sigma)
 direction <- direction0 *sqrt(p/maha)
-
-Euclid(direction)
+# Euclid(direction)
 ```
 
 
@@ -56,7 +55,8 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
 
     ## Shift alternative:
     noise <- .noise
-    noise[labels,] <- noise[labels,] + effect * direction 
+    shift <- matrix(effect * direction, nrow=20, ncol=23, byrow = TRUE)
+    noise[labels,] <- noise[labels,] + shift
 
     ## Compute observed statistic
     x1 <- noise[labels,]
