--- a/Round2/Round2_file29.Rmd
+++ b/Round2/Round2_file29.Rmd
@@ -1,16 +1,16 @@
 ---
-title: "Arbitrary Covariance from eigenvalues. Signal in LOW PCs of noise"
+title: "Arbitrary Covariance from eigenvalues. Signal in identity direction"
 author: "Jonathan Rosenblatt"
 date: "8/2/2017"
 output: html_document
 editor_options: 
-  chunk_output_type: console
+  chunk_output_type: inline
 ---
 
 
 
 ```{r preliminaries}
-file.name <- "file27"
+file.name <- "file29"
 
 balance <- TRUE   # set for TRUE for balanced folding ana refolding.
 n.replications <-  1e2 #1e3
@@ -27,19 +27,9 @@ source('Gilron Effect of Cross Validatino.R')
 effects <- seq(0, 0.5, length=3) 
 
 ## Make correlation matrix
-
-# ei.vals0 <- seq(1:p)
-# ei.vals <- ei.vals0/sum(ei.vals0)*length(ei.vals0)
-# plot(ei.vals, type='h')
-# A <- matrix(rnorm(p^2),nrow=p)
-# V <- eigen(t(A)%*%A)$vectors
-# D <- diag(ei.vals)
-# Sigma <- V%*%D%*%t(V)
-# save(Sigma, D, V, file='Sigma27.RData')
-
 load(file='Sigma27.RData')
 # lattice::levelplot(Sigma)
-direction0 <- V[,p]
+direction0 <- rep(1,p)
 maha <- mahalanobis(x = direction0, center = 0, cov = Sigma)
 direction <- direction0 * sqrt(p/maha)
 # mahalanobis(x = direction, center = 0, cov = Sigma)
@@ -150,7 +140,7 @@ save.image(file=paste(file.name,".RData", sep=''))
 
 
 ```{r analyze multiple effects}
-# load("file17.RData")
+# load("file29.RData")
 err.bar <- round(3*sqrt(.05*.95/(n.replications)),3) # confidence limits of p-value
 .limits <- 0.05 + c(-err.bar,0,err.bar)
 
